--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -16,7 +16,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-workflow-service.onrender.com" >> .env && \
     echo "APP_API_URL=https://ballerine-workflow-service.onrender.com" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
-    echo "SESSION_EXPIRATION_IN_MINUTES=30" >> .env && \
+    echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
     echo "DB_URL=postgres://admin:admin@ballerine-postgres:5432/postgres" >> .env && \
     echo "DB_USER=admin" >> .env && \
     echo "DB_PASSWORD=admin" >> .env && \
@@ -29,7 +29,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
     echo "UNIFIED_API_URL=http://ballerine-workflow-service.onrender.com" >> .env && \
-    echo "ENVIRONMENT_NAME=development" >> .env && \
+    echo "ENVIRONMENT_NAME=production" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
@@ -40,4 +40,4 @@ RUN echo "PORT=3000" >> .env && \
 
 # Set the entry point to run your desired commands
 ENTRYPOINT ["/bin/sh", "-c"]
-CMD ["npm run db:clean && npm run db:init && npm run seed && dumb-init npm run prod"]
+CMD ["npm run db:clean && npm run db:reset && npm run seed && dumb-init npm run prod"]
