--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -11,10 +11,10 @@ RUN echo "PORT=3000" >> .env && \
     echo "BACKOFFICE_PORT=5137" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
     echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://ballerine-workflow-service.onrender.com" >> .env && \
     echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-workflow-service.onrender.com" >> .env && \
-    echo "APP_API_URL=https://ballerine-workflow-service.onrender.com" >> .env && \
+    echo "APP_API_URL=https://ballerine.vaultpay.io" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
     echo "DB_URL=postgres://admin:admin@ballerine-postgres:5432/postgres" >> .env && \
@@ -23,18 +23,18 @@ RUN echo "PORT=3000" >> .env && \
     echo "DB_PORT=5432" >> .env && \
     echo "ADMIN_API_KEY=admin_secret" >>  .env && \
     echo "API_KEY=secret" >> .env && \
-    echo "NODE_ENV=development" >> .env && \
+    echo "NODE_ENV=production" >> .env && \
     echo "COMPOSE_PROJECT_NAME=ballerine-x" >> .env && \
     echo "SESSION_SECRET=secret" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
-    echo "UNIFIED_API_URL=http://ballerine-workflow-service.onrender.com" >> .env && \
+    echo "UNIFIED_API_URL=https://ballerine.vaultpay.io" >> .env && \
     echo "ENVIRONMENT_NAME=production" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
-    echo "DOMAIN_NAME=http://ballerine-workflow-service.onrender.com" >> .env && \
-    echo "VITE_API_URL=http://ballerine-workflow-service.onrender.com/api/v1/" >> .env && \
+    echo "DOMAIN_NAME=https://ballerine.vaultpay.io" >> .env && \
+    echo "VITE_API_URL=https://ballerine.vaultpay.io/api/v1/" >> .env && \
     echo "WEBHOOK_SECRET=secret" >> .env && \
     echo "WEBHOOK_URL=http://hkdk.events/n8jmuhxpo4xf5l" >> .env
 
