--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -28,8 +28,8 @@ RUN echo "PORT=3000" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
     echo "UNIFIED_API_URL=https://ballerine.vaultpay.io" >> .env && \
-    echo "NODE_ENV=development" >> .env && \
-    echo "ENVIRONMENT_NAME=development" >> .env && \
+    echo "NODE_ENV=production" >> .env && \
+    echo "ENVIRONMENT_NAME=production" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
