fix: update how we set the cors origin

--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -11,9 +11,9 @@ RUN echo "PORT=3000" >> .env && \
     echo "BACKOFFICE_PORT=5137" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
-    echo "KYB_EXAMPLE_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
+    echo "KYB_EXAMPLE_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
     echo "APP_API_URL=https://ballerine.vaultpay.io" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
