--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -7,36 +7,35 @@ RUN apt-get update && apt-get install -y dumb-init && rm -rf /var/lib/apt/lists/
 RUN rm -f .env
 
 # Create a new .env file and populate it with environment variables
-RUN echo "PORT=3000" >> .env && \
+RUN echo "DOMAIN_NAME=ballerine.vaultpay.io" >> .env && \
+    echo "PORT=3000" >> .env && \   
+    echo "VITE_API_URL=http://ballerine.vaultpay.io:3000/api/v1/" >> .env && \
+    echo "VITE_KYB_DEFINITION_ID=kyb_parent_kyc_session_example" >> .env && \
     echo "BACKOFFICE_PORT=5137" >> .env && \
-    echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
-    echo "KYB_APP_PORT=5201" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
-    echo "KYB_EXAMPLE_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
-    echo "APP_API_URL=https://ballerine.vaultpay.io" >> .env && \
+    echo "HEADLESS_SVC_PORT=5173" >> .env && \
+    echo "WORKFLOW_SVC_PORT=3000" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
-    echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
-    echo "DB_URL=postgres://admin:admin@ballerine-postgres:5432/postgres" >> .env && \
-    echo "DB_USER=admin" >> .env && \
-    echo "DB_PASSWORD=admin" >> .env && \
-    echo "DB_PORT=5432" >> .env && \
     echo "ADMIN_API_KEY=admin_secret" >>  .env && \
     echo "API_KEY=secret" >> .env && \
+    echo "NODE_ENV=development" >> .env && \
     echo "COMPOSE_PROJECT_NAME=ballerine-x" >> .env && \
+    echo "DB_PORT=5432" >> .env && \
+    echo "DB_USER=admin" >> .env && \
+    echo "DB_PASSWORD=admin" >> .env && \
     echo "SESSION_SECRET=secret" >> .env && \
-    echo "EMAIL_API_TOKEN=''" >> .env && \
+    echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
+    echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
+    echo "WEBSOCKET_SVC_PORT=3500" >> .env && \
+    echo "KYB_APP_PORT=5201" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=http://ballerine.vaultpay.io:5137" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://ballerine.vaultpay.io:5200" >> .env && \
+    echo "KYB_EXAMPLE_CORS_ORIGIN=http://ballerine.vaultpay.io:5201" >> .env && \
+    echo "WEBHOOK_SECRET=webhook_secret" >> .env && \
+    echo "WEBHOOK_URL=http://hkdk.events/n8jmuhxpo4xf5l" >> .env && \
+    echo "APP_API_URL=https://alon.ballerine.dev" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
-    echo "UNIFIED_API_URL=https://ballerine.vaultpay.io" >> .env && \
-    echo "NODE_ENV=production" >> .env && \
-    echo "ENVIRONMENT_NAME=production" >> .env && \
-    echo "HASHING_KEY_SECRET=secret" >> .env && \
-    echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
-    echo "NOTION_API_KEY=secret" >> .env && \
-    echo "DOMAIN_NAME=https://ballerine.vaultpay.io" >> .env && \
-    echo "VITE_API_URL=https://ballerine.vaultpay.io/api/v1/" >> .env && \
-    echo "WEBHOOK_SECRET=secret" >> .env && \
-    echo "WEBHOOK_URL=http://hkdk.events/n8jmuhxpo4xf5l" >> .env
+    echo "UNIFIED_API_URL=https://unified-api-test.eu.ballerine.app" >> .env && \
+    echo "ENVIRONMENT_NAME=development" >> .env
 
 # Set the entry point to run your desired commands
 ENTRYPOINT ["/bin/sh", "-c"]
