fix: tweak cors

--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -12,8 +12,8 @@ RUN echo "PORT=3000" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine.vaultpay.io" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=^https?:\\/\\/.*\\.vaultpay\\.io$" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://backoffice.vaultpay.io" >> .env && \
     echo "KYB_EXAMPLE_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
     echo "APP_API_URL=https://ballerine.vaultpay.io" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
@@ -36,7 +36,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
     echo "VITE_KYB_DEFINITION_ID=kyb_parent_kyc_session_example" >> .env && \
     echo "DOMAIN_NAME=ballerine.vaultpay.io" >> .env && \
-    echo "VITE_API_URL=https://ballerine.vaultpay.io/api/v1/" >> .env && \
+    echo "VITE_API_URL=https://ballerine.vaultpay.io/api/v1/interal" >> .env && \
     echo "WEBHOOK_SECRET=secret" >> .env && \
     echo "WEBHOOK_URL=http://hkdk.events/n8jmuhxpo4xf5l" >> .env
 
