--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -12,9 +12,9 @@ RUN echo "PORT=3000" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine.vaultpay.io" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://backoffice.vaultpay.io" >> .env && \
-    echo "KYB_EXAMPLE_CORS_ORIGIN=backoffice.vaultpay.io" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=https://ballerine.vaultpay.io" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://ballerine.vaultpay.io" >> .env && \
+    echo "KYB_EXAMPLE_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
     echo "APP_API_URL=https://ballerine.vaultpay.io" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
@@ -29,8 +29,8 @@ RUN echo "PORT=3000" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
     echo "UNIFIED_API_URL=https://ballerine.vaultpay.io" >> .env && \
-    echo "NODE_ENV=production" >> .env && \
-    echo "ENVIRONMENT_NAME=production" >> .env && \
+    echo "NODE_ENV=development" >> .env && \
+    echo "ENVIRONMENT_NAME=development" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
