--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -12,11 +12,11 @@ RUN echo "PORT=3000" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=https://ballerine-workflow-service.onrender.com" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=http://ballerine-workflow-service.onrender.com:-localhost:5137" >> .env && \
     echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://ballerine-workflow-service.onrender.com" >> .env && \
     echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
     echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
-    echo "APP_API_URL=https://ballerine-workflow-service.onrender.com" >> .env && \
+    echo "APP_API_URL=https://alon.ballerine.dev/api" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
     echo "DB_URL=postgres://admin:admin@ballerine-postgres:5432/postgres" >> .env && \
@@ -25,19 +25,17 @@ RUN echo "PORT=3000" >> .env && \
     echo "DB_PORT=5432" >> .env && \
     echo "ADMIN_API_KEY=admin_secret" >>  .env && \
     echo "API_KEY=secret" >> .env && \
-    echo "COMPOSE_PROJECT_NAME=ballerine-x" >> .env && \
     echo "SESSION_SECRET=secret" >> .env && \
     echo "EMAIL_API_TOKEN=''" >> .env && \
     echo "EMAIL_API_URL=https://api.sendgrid.com/v3/mail/send" >> .env && \
-    echo "UNIFIED_API_URL=https://ballerine-workflow-service.onrender.com" >> .env && \
-    echo "NODE_ENV=development" >> .env && \
+    echo "UNIFIED_API_URL=https://unified-api-test.eu.ballerine.app" >> .env && \
+    echo "UNIFIED_API_TOKEN: ''" >> .env && \
+    echo "NODE_ENV=local" >> .env && \
     echo "ENVIRONMENT_NAME=development" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
-    echo "VITE_KYB_DEFINITION_ID=kyb_parent_kyc_session_example" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
-    echo "VITE_API_URL=https://ballerine-workflow-service.onrender.com/api/v1/interal" >> .env && \
     echo "WEBHOOK_SECRET=secret" >> .env && \
     echo "WEBHOOK_URL=http://hkdk.events/n8jmuhxpo4xf5l" >> .env
 
