--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -12,7 +12,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=http://ballerine-workflow-service.onrender.com:-localhost:5137" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:-localhost:5137" >> .env && \
     echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://ballerine-workflow-service.onrender.com" >> .env && \
     echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
     echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
