--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -12,10 +12,10 @@ RUN echo "PORT=3000" >> .env && \
     echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
-    echo "BACKOFFICE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:-localhost:5137" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://ballerine-workflow-service.onrender.com" >> .env && \
-    echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
-    echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
+    echo "BACKOFFICE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
+    echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-workflow-service.onrender.com" >> .env && \
+    # echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
     echo "APP_API_URL=https://alon.ballerine.dev/api" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
