--- a/apps/backoffice-v2/Dockerfile
+++ b/apps/backoffice-v2/Dockerfile
@@ -14,7 +14,7 @@ RUN rm -f .env
 
 # Create a new .env file and populate it with environment variables
 RUN echo "PORT=5137" >> .env && \
-    echo "VITE_API_URL=http://ballerine-workflow-service.onrender.com:-localhost:3000/api/v1/internal" >> .env && \
+    echo "VITE_API_URL=http://ballerine-workflow-service.onrender.com:3000/api/v1/internal" >> .env && \
     echo "VITE_API_KEY=secret" >> .env && \
     echo "VITE_AUTH_ENABLED=true" >> .env && \
     echo "VITE_MOCK_SERVER=false" >> .env && \
