--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -13,9 +13,9 @@ RUN echo "PORT=3000" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
     echo "BACKOFFICE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
-    echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-workflow-service.onrender.com" >> .env && \
-    # echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://ballerine-workflows-dashboard.onrender.com" >> .env && \
+    echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-kyb-app.onrender.com" >> .env && \
+    echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
     echo "APP_API_URL=https://alon.ballerine.dev/api" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
@@ -31,7 +31,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "UNIFIED_API_URL=https://unified-api-test.eu.ballerine.app" >> .env && \
     echo "UNIFIED_API_TOKEN: ''" >> .env && \
     echo "NODE_ENV=local" >> .env && \
-    echo "ENVIRONMENT_NAME=development" >> .env && \
+    echo "ENVIRONMENT_NAME=local" >> .env && \
     echo "HASHING_KEY_SECRET=secret" >> .env && \
     echo "HASHING_KEY_SECRET_BASE64=JDJiJDEwJEdSUHhqQXQ2aGtYcGQxQ2NNcmxvZnU=" >> .env && \
     echo "NOTION_API_KEY=secret" >> .env && \
