--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -13,7 +13,7 @@ RUN echo "PORT=3000" >> .env && \
     echo "KYB_APP_PORT=5201" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
     echo "BACKOFFICE_CORS_ORIGIN=https://ballerine-back-office.onrender.com" >> .env && \
-    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://ballerine-workflows-dashboard.onrender.com" >> .env && \
+    echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://backoffice.vaultpay.io" >> .env && \
     echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-kyb-app.onrender.com" >> .env && \
     echo "KYC_EXAMPLE_CORS_ORIGIN=http://ballerine-back-office.onrender.com:5137" >> .env && \
     echo "APP_API_URL=https://alon.ballerine.dev/api" >> .env && \
