fix: update login page image url

--- a/apps/backoffice-v2/Dockerfile
+++ b/apps/backoffice-v2/Dockerfile
@@ -21,6 +21,7 @@ RUN echo "PORT=80" >> .env && \
     echo "VITE_POLLING_INTERVAL=10" >> .env && \
     echo "VITE_ASSIGNMENT_POLLING_INTERVAL=5" >> .env && \
     echo "VITE_FETCH_SIGNED_URL=false" >> .env && \
+    echo "VITE_IMAGE_LOGO_URL=https://raw.githubusercontent.com/vault-pay/logo/main/vaultpay-logo-1200.svg" >> .env && \
     echo "VITE_ENVIRONMENT_NAME=local" >> .env
 
 ENV NODE_OPTIONS="--max-old-space-size=8192"
