--- a/Dockerfile.workflow-service
+++ b/Dockerfile.workflow-service
@@ -41,4 +41,6 @@ RUN echo "PORT=3000" >> .env && \
 
 # Set the entry point to run your desired commands
 ENTRYPOINT ["/bin/sh", "-c"]
-CMD ["npm run db:clean && npm run db:init && npm run seed && dumb-init npm run prod"]
+# ATTENTION! USE THIS COMMAND ONLY TO WIPED THE DB OUT FOR TEST
+# CMD ["npm run db:clean && npm run db:init && npm run seed && dumb-init npm run prod"]
+CMD ["dumb-init npm run prod"]
