--- a/apps/workflows-dashboard/Dockerfile
+++ b/apps/workflows-dashboard/Dockerfile
@@ -12,6 +12,7 @@ COPY . .
 RUN rm -f .env
 
 RUN echo "PORT=80" >> .env && \
+    echo "WORKFLOW_DASHBOARD_PORT=5200" >> .env && \
     echo "VITE_API_URL=https://ballerine-workflow-service.onrender.com/api/v1/" >> .env && \
     echo "MODE=development" >> .env && \
     echo "VITE_IMAGE_LOGO_URL=https://raw.githubusercontent.com/vault-pay/logo/main/vaultpay-logo-1200.svg" >> .env && \
