--- a/deploy/docker-compose-dev.yml
+++ b/deploy/docker-compose-dev.yml
@@ -14,20 +14,20 @@ services:
     depends_on:
       - service      
     restart: on-failure
-  headlessservice:
-    volumes:
-      - ../examples/headless-example/:/app
-      - /app/node_modules
-    build:
-      context: ../examples/headless-example
-      target: "dev"
-      args:
-        NPM_LOG_LEVEL: notice
-    ports:
-      - ${HEADLESS_SVC_PORT}:${HEADLESS_SVC_PORT}
-    depends_on:
-      - service
-    restart: on-failure    
+  # headlessservice:
+  #   volumes:
+  #     - ../examples/headless-example/:/app
+  #     - /app/node_modules
+  #   build:
+  #     context: ../examples/headless-example
+  #     target: "dev"
+  #     args:
+  #       NPM_LOG_LEVEL: notice
+  #   ports:
+  #     - ${HEADLESS_SVC_PORT}:${HEADLESS_SVC_PORT}
+  #   depends_on:
+  #     - service
+  #   restart: on-failure    
   workflows-dashboard:
     volumes:
       - ../apps/workflows-dashboard/:/app
@@ -62,9 +62,18 @@ services:
       - /app/node_modules
     build:
       context: ../services/workflows-service/
-      target: "dev"
+      target: "prod"
       args:
         NPM_LOG_LEVEL: notice
+    command:
+      - /bin/sh
+      - -c
+      - dumb-init npm run prod
+#      - |
+#        npm run db:clean
+#        npm run db:init
+#        npm run seed
+#        dumb-init npm run prod
     ports:
       - ${WORKFLOW_SVC_PORT}:${WORKFLOW_SVC_PORT}
     environment:
@@ -90,7 +99,7 @@ services:
       - /app/node_modules
     build:
       context: ../services/workflows-service/
-      target: "dev"
+      target: "prod"
       args:
         NPM_LOG_LEVEL: notice
     command: npm run db:init
@@ -103,18 +112,23 @@ services:
         condition: service_healthy
     restart: on-failure
   db:
-    image: postgres:12
+    container_name: ballerine-postgres
+    image: sibedge/postgres-plv8:15.3-3.1.7
     ports:
-      - 5430:${DB_PORT}
+      - ${DB_PORT}:${DB_PORT}
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
     volumes:
-      - ./postgres:/var/lib/postgresql/data
+      - postgres15:/var/lib/postgresql/data
     healthcheck:
       test:
         - CMD
         - pg_isready
+        - -U
+        - admin
       timeout: 45s
       interval: 10s
       retries: 10
+volumes:
+  postgres15: ~
