--- a/render.yaml
+++ b/render.yaml
@@ -59,11 +59,11 @@ services:
       - key: VITE_API_URL
         value: http://ballerine-backend.onrender.com/api/v1/
       - key: VITE_AUTH_ENABLED
-        sync: true
+        value: "true"
       - key: VITE_MOCK_SERVER
-        sync: false
+        value: "false"
       - key: VITE_FETCH_SIGNED_URL
-        sync: false
+        value: "false"
       - key: VITE_ENVIRONMENT_NAME
         value: local
 
