feat: fix env variables in dockerfile

--- a/services/workflows-service/Dockerfile
+++ b/services/workflows-service/Dockerfile
@@ -27,8 +27,8 @@ RUN echo "PORT=3000" >> .env && \
     echo "DOMAIN_NAME=ballerine-workflow-service.onrender.com" >> .env && \
     echo "BACKOFFICE_CORS_ORIGIN=https://vaultpay-back-office.onrender.com" >> .env && \
     echo "WORKFLOW_DASHBOARD_CORS_ORIGIN=https://ballerine-dashboard.onrender.com" >> .env && \
-    echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-dashboard.onrender.com" >> .env && \
-    echo "KYC_EXAMPLE_CORS_ORIGIN=https://ballerine-dashboard.onrender.com" >> .env && \
+    echo "KYB_EXAMPLE_CORS_ORIGIN=https://ballerine-kyb.onrender.com" >> .env && \
+    echo "KYC_EXAMPLE_CORS_ORIGIN=https://ballerine-kyb.onrender.com" >> .env && \
     echo "APP_API_URL=https://alon.ballerine.dev/api" >> .env && \
     echo "BCRYPT_SALT=10" >> .env && \
     echo "SESSION_EXPIRATION_IN_MINUTES=60" >> .env && \
